--- a/source/_patterns/atom/jios/leisure-jio.mustache
+++ b/source/_patterns/atom/jios/leisure-jio.mustache
@@ -2,25 +2,25 @@
   <div class='jio__title'>This is a jio</div>
   <div class='jio__date'>2019-02-11</div>
   <button class='btn btn-info jio__btn' data-toggle='modal' data-target='#joinJioModal'>Me!</button>
-</div>
-<div class='modal' id='joinJioModal' tabindex='-1' role='dialog'>
-  <div class='modal-dialog' role='document'>
-    <div class='modal-content'>
-      <div class='modal-header'>
-        <h5 class='modal-title'>Add me to the jio</h5>
-        <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
-          <span aria-hidden='true'>&times;</span>
-        </button>
-      </div>
-      <div class='modal-body'>
-        <div class="input-group mb-3 flex-column">
-          <input type="text" class="form-control mb-2 w-100" placeholder="Name" aria-label="Name">
-          <input type="text" class="form-control w-100" placeholder="Telegram handler" aria-label="Telegram-handler">
+  <div class='modal jio__modal' id='joinJioModal' tabindex='-1' role='dialog'>
+    <div class='modal-dialog' role='document'>
+      <div class='modal-content'>
+        <div class='modal-header'>
+          <h5 class='modal-title'>Add me to the jio</h5>
+          <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
+            <span aria-hidden='true'>&times;</span>
+          </button>
         </div>
-      </div>
-      <div class='modal-footer'>
-        <button type='button' class='btn btn-secondary' data-dismiss='modal'>Close</button>
-        <button type='button' class='btn btn-primary'>Save changes</button>
+        <div class='modal-body'>
+          <div class="input-group mb-3 flex-column">
+            <input type="text" class="form-control mb-2 w-100" placeholder="Name" aria-label="Name">
+            <input type="text" class="form-control w-100" placeholder="Telegram handler" aria-label="Telegram-handler">
+          </div>
+        </div>
+        <div class='modal-footer'>
+          <button type='button' class='btn btn-secondary' data-dismiss='modal'>Close</button>
+          <button type='button' class='btn btn-primary'>Save changes</button>
+        </div>
       </div>
     </div>
   </div>
