--- a/source/_patterns/atom/birthdays/birthdays.mustache
+++ b/source/_patterns/atom/birthdays/birthdays.mustache
@@ -4,15 +4,15 @@
   <ul class="list-group">
   <li class="list-group-item d-flex justify-content-between align-items-center">
     Ken Lo
-    <h5><span class="badge badge-primary badge-pill">1 March</span></h5>
+    <h5><span class="badge badge-info">1 March</span></h5>
   </li>
   <li class="list-group-item d-flex justify-content-between align-items-center">
     Len Ko
-    <h5><span class="badge badge-primary badge-pill">2 March</span></h5>
+    <h5><span class="badge badge-light">2 March</span></h5>
   </li>
   <li class="list-group-item d-flex justify-content-between align-items-center">
     Wei Jian
-    <h5><span class="badge badge-primary badge-pill">15 March</span></h5>
+    <h5><span class="badge badge-light">15 March</span></h5>
   </li>
 </ul>
 </div>
