Changes to jio component, fix listing style for project status

--- a/source/_patterns/molecule/project-lists/project-list.mustache
+++ b/source/_patterns/molecule/project-lists/project-list.mustache
@@ -1,9 +1,11 @@
 <div class='container'>
   <div class='headers row'>
-    <div class='header__goal offset-2 col-5'>Sprint Goal</div>
-    <div class='header__status col-5'>Status this week</div>
+    <div class='header__goal offset-2 col-5'><b>Sprint Goal</b></div>
+    <div class='header__status col-5'><b>Status this Week</b></div>
   </div>
   {{>atom-project}}
   {{>atom-project}}
   {{>atom-project}}
+
+
 </div>
