--- a/source/_patterns/atom/jios/leisure-jio.mustache
+++ b/source/_patterns/atom/jios/leisure-jio.mustache
@@ -1,7 +1,7 @@
 <div class='jio'>
   <div class='jio__title'>This is a jio</div>
   <div class='jio__date'>2019-02-11</div>
-  <button class='btn btn-info jio__btn' data-toggle='modal' data-target='#joinJioModal'>Me!</button>
+  <button class='btn btn-success jio__btn' data-toggle='modal' data-target='#joinJioModal'>Count me in!</button>
   <div class='modal jio__modal' id='joinJioModal' tabindex='-1' role='dialog'>
     <div class='modal-dialog' role='document'>
       <div class='modal-content'>
@@ -12,14 +12,18 @@
           </button>
         </div>
         <div class='modal-body'>
-          <div class="input-group mb-3 flex-column">
-            <input type="text" class="form-control mb-2 w-100" placeholder="Name" aria-label="Name">
-            <input type="text" class="form-control w-100" placeholder="Telegram handler" aria-label="Telegram-handler">
+          <div class='input-group mb-3 flex-column'>
+            <label for='name'>Name</label>
+            <input type='text'  id='name' class='form-control mb-2 w-100' placeholder='Your pretty/handsome name please' aria-label='Your pretty/handsome name please'>
+            <label for='product-team'>Which product team are you from?</label>
+            <input type='text' id='product-team' class='form-control mb-2 w-100' placeholder='E.g. MOL Families, EOL, WOGAA, etc.' aria-label='E.g. MOL Families, EOL, WOGAA, etc.'>
+            <label for='telegram-handle'>What's your Telegram handle?</label>
+            <input type='text' id='telegram-handle' class='form-control w-100' placeholder='So the jio-er will know how to contact you' aria-label='So the jio-er will know how to contact you'>
           </div>
         </div>
         <div class='modal-footer'>
-          <button type='button' class='btn btn-secondary' data-dismiss='modal'>Close</button>
-          <button type='button' class='btn btn-primary'>Save changes</button>
+          <button type='button' class='btn btn-light' data-dismiss='modal'>Cancel</button>
+          <button type='button' class='btn btn-success'>Jio me!</button>
         </div>
       </div>
     </div>
