--- a/source/_patterns/atom/projects/project.mustache
+++ b/source/_patterns/atom/projects/project.mustache
@@ -2,7 +2,7 @@
   <div class='project__name col-2'>EOL</div>
   <div class='project__goal col-5'>
     <p class='project__goal__sprint-number'>Sprint 5</p>
-    <p class='project__goal__task'>This is the actual task to be completed</p>
+    <p class='project__goal__task'>Your sprint goals go here</p>
   </div>
   <div class='project__status col-5'>
     <p>
