floorplan and stack styling

--- a/source/_patterns/atom/floorplan/floorplan.mustache
+++ b/source/_patterns/atom/floorplan/floorplan.mustache
@@ -7,7 +7,10 @@
         </div>
 
         <div class='row'>
-            <div class='floorplan__area stand-up-area offset-6 col-3'>STAND UP AREA</div>
+            <div class='floorplan__area stand-up-area offset-6 col-3'>
+              <span class="badge badge-pill badge-danger you-are-here">You are here</span>
+              STAND UP AREA
+            </div>
         </div>
 
         <div class='row'>
