--- a/source/_patterns/atom/project-stacks/project-stack.mustache
+++ b/source/_patterns/atom/project-stacks/project-stack.mustache
@@ -1,5 +1,6 @@
 <div class='project-stack'>
-    <div class="title">End of Life (EOL)<span class='sprint'> Sprint 6</span></div>
+
+    <div class="title" style="border-bottom: 3px solid #bbdef0;">End of Life (EOL)<span class='sprint'> Sprint 6</span></div>
     
     <div class="description">Bacon ipsum dolor amet tenderloin prosciutto tail t-bone alcatra. Shoulder burgdoggen kevin tri-tip doner flank ham.</div>
     
