--- a/source/_patterns/molecule/project-stack/project-stack-list.mustache
+++ b/source/_patterns/molecule/project-stack/project-stack-list.mustache
@@ -1,65 +1,70 @@
-<div class='project-stack-list'>
-    <div class='project-stack'>
-        <div class="title">End of Life (EOL)<span class='sprint'> Sprint 6</span></div>
-        <div class="description">Bacon ipsum dolor amet tenderloin prosciutto tail t-bone alcatra. Shoulder burgdoggen kevin tri-tip doner flank ham.</div>
-        <div class="bottom">
-            <div class="icons">
-                <i class="fab fa-sass"></i>
-                <i class="fab fa-react"></i>
-                <i class="fab fa-node"></i>
-                <i class="fab fa-github"></i>
-                    <i class="fab fa-docker"></i>
-                <i class="fab fa-aws"></i>
+ {{>atom-floorplan}}
+<div class='container'>
+    <div class='row'>
+        <div class='project-stack-list'>
+        <div class='project-stack'>
+            <div class="title" style="border-bottom: 3px solid #bbdef0;">End of Life (EOL)<span class='sprint'> Sprint 6</span></div>
+            <div class="description">Bacon ipsum dolor amet tenderloin prosciutto tail t-bone alcatra. Shoulder burgdoggen kevin tri-tip doner flank ham.</div>
+            <div class="bottom">
+                <div class="icons">
+                    <i class="fab fa-sass"></i>
+                    <i class="fab fa-react"></i>
+                    <i class="fab fa-node"></i>
+                    <i class="fab fa-github"></i>
+                        <i class="fab fa-docker"></i>
+                    <i class="fab fa-aws"></i>
+                </div>
+                <span class="members">18 Members</span>
+                <div class="memberlist">
+                    Trey<br>
+                    Weijian<br>
+                    Yihui<br>
+                    Leonard<br>
+                </div>
             </div>
-            <span class="members">18 Members</span>
-            <div class="memberlist">
-                Trey<br>
-                Weijian<br>
-                Yihui<br>
-                Leonard<br>
+        </div>
+            <div class='project-stack'>
+            <div class="title" style="border-bottom: 3px solid #f08700;">Moments of Life (MOL)<span class='sprint'> Sprint 49</span></div>
+            <div class="description">Bacon ipsum dolor amet tenderloin prosciutto tail t-bone alcatra. Shoulder burgdoggen kevin tri-tip doner flank ham.</div>
+            <div class="bottom">
+                <div class="icons">
+                    <i class="fab fa-sass"></i>
+                    <i class="fab fa-angular"></i>
+                    <i class="fab fa-node"></i>
+                    <i class="fab fa-apple-pay"></i>
+                        <i class="fab fa-jenkins"></i>
+                    <i class="fab fa-aws"></i>
+                </div>
+                <span class="members">23 Members</span>
+                <div class="memberlist">
+                    Trey<br>
+                    Weijian<br>
+                    Yihui<br>
+                    Leonard<br>
+                </div>
+            </div>
+        </div>
+            <div class='project-stack'>
+            <div class="title" style="border-bottom: 3px solid #00a6a6;">Whole of Government Application Analytics (WOGAA)<span class='sprint'> Sprint 36</span></div>
+            <div class="description">Bacon ipsum dolor amet tenderloin prosciutto tail t-bone alcatra. Shoulder burgdoggen kevin tri-tip doner flank ham.</div>
+            <div class="bottom">
+                <div class="icons">
+                    <i class="fab fa-html5"></i>
+                    <i class="fab fa-react"></i>
+                    <i class="fab fa-node"></i>
+                    <i class="fab fa-npm"></i>
+                        <i class="fab fa-docker"></i>
+                    <i class="fab fa-aws"></i>
+                </div>
+                <span class="members">27 Members</span>
+                <div class="memberlist">
+                    Trey<br>
+                    Weijian<br>
+                    Yihui<br>
+                    Leonard<br>
+                </div>
             </div>
         </div>
     </div>
-        <div class='project-stack'>
-        <div class="title">Moments of Life (MOL)<span class='sprint'> Sprint 49</span></div>
-        <div class="description">Bacon ipsum dolor amet tenderloin prosciutto tail t-bone alcatra. Shoulder burgdoggen kevin tri-tip doner flank ham.</div>
-        <div class="bottom">
-            <div class="icons">
-                <i class="fab fa-sass"></i>
-                <i class="fab fa-angular"></i>
-                <i class="fab fa-node"></i>
-                <i class="fab fa-apple-pay"></i>
-                    <i class="fab fa-jenkins"></i>
-                <i class="fab fa-aws"></i>
-            </div>
-            <span class="members">23 Members</span>
-            <div class="memberlist">
-                Trey<br>
-                Weijian<br>
-                Yihui<br>
-                Leonard<br>
-            </div>
-        </div>
-    </div>
-        <div class='project-stack'>
-        <div class="title">Parents Gateway(PG)<span class='sprint'> Sprint 36</span></div>
-        <div class="description">Bacon ipsum dolor amet tenderloin prosciutto tail t-bone alcatra. Shoulder burgdoggen kevin tri-tip doner flank ham.</div>
-        <div class="bottom">
-            <div class="icons">
-                <i class="fab fa-html5"></i>
-                <i class="fab fa-react"></i>
-                <i class="fab fa-node"></i>
-                <i class="fab fa-npm"></i>
-                    <i class="fab fa-docker"></i>
-                <i class="fab fa-aws"></i>
-            </div>
-            <span class="members">27 Members</span>
-            <div class="memberlist">
-                Trey<br>
-                Weijian<br>
-                Yihui<br>
-                Leonard<br>
-            </div>
-        </div>
     </div>
 </div>
