--- a/source/css/style.css
+++ b/source/css/style.css
@@ -10,53 +10,82 @@
   text-align: center;
 }
 
+.floorplan__area:hover {
+  transform: scale(1.1);
+  transition: 200ms ease;
+  z-index: 999;
+}
+
+.you-are-here {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 8px;
+  padding: 8px;
+}
+
 .mol {
+  border-radius: 120px 0 0 0;
   background: #f08700;
 }
 .uiux {
   background: #efca08;
 }
 .wogaa {
+  border-radius: 0 120px 0 0;
   background: #00a6a6;
 }
 .stand-up-area {
-  background: whitesmoke;
+  background: repeating-linear-gradient(
+    -55deg,
+    white,
+    white 10px,
+    whitesmoke 10px,
+    whitesmoke 20px
+  );
+  display: flex;
+  flex-direction: column;
 }
 .main-area {
-  background: whitesmoke;
+  border-radius: 0 0 0 120px;
+  background: repeating-linear-gradient(
+    -55deg,
+    whitesmoke,
+    whitesmoke 10px,
+    white 10px,
+    white 20px
+  );
 }
 .eol {
   background: #bbdef0;
+  border-radius: 0 0 120px 0;
 }
-
 .jio {
   border: 1px solid black;
   border-radius: 4px;
   padding: 16px;
-  overflow: hidden; /* To keep auto height of parent when child is floated*/
+  overflow: hidden;
+  /* To keep auto height of parent when child is floated*/
   margin-bottom: 16px;
 }
-
 .jio:last-child {
   margin-bottom: 0;
 }
-
 .jio__title {
   margin-bottom: 8px;
 }
-
 .jio__btn {
   margin-top: 16px;
   display: block;
   float: right;
 }
+/* Project Stack */
 .project-stack-list {
-  width: 400px;
 }
 .project-stack {
   margin: 10px 0px;
-  border-bottom: 1px solid #e4e4e4;
-  padding: 10px 0 20px 10px;
+  box-shadow: 1px 1px 2px 1px rgba(204, 204, 204, 1);
+  padding: 10px 15px 20px;
 }
 .project-stack .title {
   font-size: 1.2rem;
