more styling birthdays floorplan yearcompletion projectstack

--- a/source/_patterns/atom/birthdays/birthdays.mustache
+++ b/source/_patterns/atom/birthdays/birthdays.mustache
@@ -1,9 +1,9 @@
 <div>
-  <h3>🎂 Birthdays for this month (March) 🎉</h3>
+  <h3>Birthdays for this month (March) 🎉</h3>
   <br>
   <ul class="list-group">
   <li class="list-group-item d-flex justify-content-between align-items-center">
-    Ken Lo
+    Ken Lo 🎂 
     <h5><span class="badge badge-info">1 March</span></h5>
   </li>
   <li class="list-group-item d-flex justify-content-between align-items-center">
