--- a/source/_patterns/atom/floorplan/floorplan.mustache
+++ b/source/_patterns/atom/floorplan/floorplan.mustache
@@ -14,8 +14,18 @@
         </div>
 
         <div class='row'>
-            <div class='floorplan__area main-area col-9'>MAIN AREA</div>
+            <div class='floorplan__area main-area col-9'>
+                <div class="stand-up-door"></div>
+                <div class="pantry-door"></div>
+                MAIN AREA
+            </div>
             <div class='floorplan__area eol col-3'>EOL</div>
+        </div>
+
+        <div class='row'>
+            <div class='floorplan__area entrance col-2'>
+            <div class="entrance-door"></div>
+            </div>
         </div>
         
     </div>
