--- a/source/_patterns/molecule/project-stack/project-stack-list.mustache
+++ b/source/_patterns/molecule/project-stack/project-stack-list.mustache
@@ -1,11 +1,13 @@
  {{>atom-floorplan}}
+
 <div class='container'>
     <div class='row'>
-        <div class='project-stack-list'>
-        <div class='project-stack'>
-            <div class="title" style="border-bottom: 3px solid #bbdef0;">End of Life (EOL)<span class='sprint'> Sprint 6</span></div>
-            <div class="description">Bacon ipsum dolor amet tenderloin prosciutto tail t-bone alcatra. Shoulder burgdoggen kevin tri-tip doner flank ham.</div>
-            <div class="bottom">
+        <div class='widget-card-list'>
+            <div class='widget-card'>
+                <div class="title" style="border-bottom: 3px solid #bbdef0;">End of Life (EOL)<span class='sprint'> Sprint 6</span></div>
+                <div class="description">Bacon ipsum dolor amet tenderloin prosciutto tail t-bone alcatra. Shoulder burgdoggen kevin tri-tip doner flank ham.
+                <br><a href="/">Demo</a>|<a href="/">Repo</a>|<a href="/">Docs</a>
+                </div>        
                 <div class="icons">
                     <i class="fab fa-sass"></i>
                     <i class="fab fa-react"></i>
@@ -21,12 +23,13 @@
                     Yihui<br>
                     Leonard<br>
                 </div>
+            
             </div>
-        </div>
-            <div class='project-stack'>
-            <div class="title" style="border-bottom: 3px solid #f08700;">Moments of Life (MOL)<span class='sprint'> Sprint 49</span></div>
-            <div class="description">Bacon ipsum dolor amet tenderloin prosciutto tail t-bone alcatra. Shoulder burgdoggen kevin tri-tip doner flank ham.</div>
-            <div class="bottom">
+            <div class='widget-card'>
+                <div class="title" style="border-bottom: 3px solid #f08700;">Moments of Life (MOL)<span class='sprint'> Sprint 49</span></div>
+                <div class="description">Bacon ipsum dolor amet tenderloin prosciutto tail t-bone alcatra. Shoulder burgdoggen kevin tri-tip doner flank ham.
+                <br><a href="/">Demo</a>|<a href="/">Repo</a>|<a href="/">Docs</a>
+                </div>
                 <div class="icons">
                     <i class="fab fa-sass"></i>
                     <i class="fab fa-angular"></i>
@@ -43,11 +46,12 @@
                     Leonard<br>
                 </div>
             </div>
-        </div>
-            <div class='project-stack'>
-            <div class="title" style="border-bottom: 3px solid #00a6a6;">Whole of Government Application Analytics (WOGAA)<span class='sprint'> Sprint 36</span></div>
-            <div class="description">Bacon ipsum dolor amet tenderloin prosciutto tail t-bone alcatra. Shoulder burgdoggen kevin tri-tip doner flank ham.</div>
-            <div class="bottom">
+            <div class='widget-card'>
+                <div class="title" style="border-bottom: 3px solid #00a6a6;">Whole of Government Application Analytics (WOGAA)<span class='sprint'> Sprint 36</span></div>
+                <div class="description">Bacon ipsum dolor amet tenderloin prosciutto tail t-bone alcatra. Shoulder burgdoggen kevin tri-tip doner flank ham.
+                    <br><a href="/">Demo</a>|<a href="/">Repo</a>|<a href="/">Docs</a>
+                </div>
+                
                 <div class="icons">
                     <i class="fab fa-html5"></i>
                     <i class="fab fa-react"></i>
@@ -63,8 +67,10 @@
                     Yihui<br>
                     Leonard<br>
                 </div>
+                
             </div>
+
+             {{>atom-year-completion}}
         </div>
-    </div>
     </div>
 </div>
