--- a/source/_patterns/atom/project-stacks/project-stack.mustache
+++ b/source/_patterns/atom/project-stacks/project-stack.mustache
@@ -1,8 +1,10 @@
-<div class='project-stack'>
+<div class='widget-card'>
 
     <div class="title" style="border-bottom: 3px solid #bbdef0;">End of Life (EOL)<span class='sprint'> Sprint 6</span></div>
     
-    <div class="description">Bacon ipsum dolor amet tenderloin prosciutto tail t-bone alcatra. Shoulder burgdoggen kevin tri-tip doner flank ham.</div>
+    <div class="description">Bacon ipsum dolor amet tenderloin prosciutto tail t-bone alcatra. Shoulder burgdoggen kevin tri-tip doner flank ham.
+    <br><a href="/">Demo</a>|<a href="/">Repo</a>|<a href="/">Docs</a>
+    </div>
     
     <div class="icons">
         <i class="fab fa-sass"></i>
