Edit template for leisure jio

--- a/source/_patterns/atom/jios/leisure-jio.mustache
+++ b/source/_patterns/atom/jios/leisure-jio.mustache
@@ -1,7 +1,7 @@
 <div class='jio'>
-  <div class='jio__title'>This is a jio</div>
+  <h3 class='jio__title'>This is a jio</h3>
   <div class='jio__date'>2019-02-11</div>
-  <button class='btn btn-success jio__btn' data-toggle='modal' data-target='#joinJioModal'>Count me in!</button>
+  <button class='btn btn-primary jio__btn' data-toggle='modal' data-target='#joinJioModal'>✋🏻 Count me in!</button>
   <div class='modal jio__modal' id='joinJioModal' tabindex='-1' role='dialog'>
     <div class='modal-dialog' role='document'>
       <div class='modal-content'>
