--- a/source/_patterns/molecule/project-stack/project-stack-list.mustache
+++ b/source/_patterns/molecule/project-stack/project-stack-list.mustache
@@ -71,6 +71,7 @@
             </div>
 
              {{>atom-year-completion}}
+             {{>atom-table-tennis-ranking}}
         </div>
     </div>
 </div>
