--- a/source/css/style.css
+++ b/source/css/style.css
@@ -165,6 +165,16 @@
   text-align: center;
   font-size: 3.5rem;
 }
+.widget-card .ranklist {
+  margin: 15px 0;
+}
+.widget-card .rankrow {
+  margin: 0px;
+  padding: 10px 20px;
+  font-size: 1rem;
+  font-weight: 500;
+  border-bottom: 1px solid #e4e4e4;
+}
 ol {
   list-style-position: inside;
   padding-left: 0;
